Setup production environment and initial project configuration
- Added .env file to define NODE_ENV as production for environment management.
- Updated app.json to reflect the new app version (0.0.1) and modified the scheme to "kattunarkuzhu".
- Configured splash screen settings and asset bundle patterns in app.json.
- Integrated react-native-dotenv for environment variable management in babel.config.js.
- Created eas.json for build configurations across development, preview, and production environments.
- Established initial Android project structure with necessary Gradle files and configurations.
- Added iOS project files including AppDelegate, Info.plist, and necessary assets for the Kattunar-Kuzhu app.

These changes lay the groundwork for a production-ready application with proper environment handling and project structure.

--- a/app.json
+++ b/app.json
@@ -2,25 +2,52 @@
   "expo": {
     "name": "Kattunar-Kuzhu",
     "slug": "Kattunar-Kuzhu",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "kattunarkuzhu",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#2D1248"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.kattunarkuzhu.app",
+      "buildNumber": "0.0.1",
+      "infoPlist": {
+        "UIBackgroundModes": [
+          "fetch"
+        ],
+        "NSCameraUsageDescription": "This app uses the camera to enable profile photo uploads.",
+        "NSPhotoLibraryUsageDescription": "This app uses the photo library to enable profile photo uploads.",
+        "NSLocationWhenInUseUsageDescription": "This app uses your location to show nearby community events."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#2D1248"
+      },
+      "package": "com.kattunarkuzhu.app",
+      "versionCode": 1,
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "themeColor": "#2D1248"
     },
     "plugins": [
       "expo-router",
@@ -30,12 +57,38 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#2D1248"
+        }
+      ],
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./assets/fonts/SpaceMono-Regular.ttf"
+          ]
         }
       ]
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "your-eas-project-id"
+      }
+    },
+    "owner": "kattunarkuzhu",
+    "privacy": "unlisted",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/your-eas-project-id",
+      "fallbackToCacheTimeout": 0,
+      "enabled": true
     }
   }
 }
