Implement main application entry point and update project structure
- Created App.js as the main entry point for the application, utilizing Expo's registerRootComponent and ExpoRoot for routing.
- Updated index.js to ensure the correct entry point is used for the Expo Router.
- Changed the main entry in package.json to point to App.js instead of expo-router/entry.
- Modified _layout.tsx to set the initial route to the custom home screen.
- Removed unused tab layout files and components to streamline the project structure.

These changes establish a clearer entry point for the application and improve the overall organization of the project, enhancing maintainability and clarity for future development.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-app",
-  "main": "expo-router/entry",
+  "main": "App.js",
   "version": "0.0.1",
   "scripts": {
     "start": "expo start",
