--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
+    "expo-camera": "^16.1.11",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image-manipulator": "^13.1.7",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
     "expo-secure-store": "^14.2.3",
@@ -71,6 +73,7 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "~4.4.0",
