Update dependencies and enhance authentication flow
- Updated package.json and package-lock.json to include new dependencies such as @react-native-firebase/app, @react-native-firebase/auth, react-hook-form, and zod for improved functionality and form handling.
- Introduced AuthContext for managing authentication state and user sessions, enhancing the overall user experience.
- Implemented reCAPTCHA verification for phone authentication in the login and registration processes, improving security and user verification.
- Refactored onboarding and login components to streamline user navigation and state management, ensuring a smoother onboarding experience.

These updates significantly enhance the app's authentication capabilities and user flow, providing a more secure and user-friendly experience.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,9 +93,6 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "0.0.1"
-        
-        // Add NODE_ENV environment variable for bundle creation
-        buildConfigField "String", "NODE_ENV", "\"production\""
     }
     signingConfigs {
         debug {
@@ -104,45 +101,28 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-        release {
-            storeFile file(MYAPP_UPLOAD_STORE_FILE)
-            storePassword MYAPP_UPLOAD_STORE_PASSWORD
-            keyAlias MYAPP_UPLOAD_KEY_ALIAS
-            keyPassword MYAPP_UPLOAD_KEY_PASSWORD
-        }
     }
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
-            buildConfigField "String", "NODE_ENV", "\"development\""
         }
         release {
-            signingConfig signingConfigs.release
-            minifyEnabled false
-            shrinkResources false
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-    }
+            // Caution! In production, you need to generate your own keystore file.
+            // see https://reactnative.dev/docs/signed-apk-android.
+            signingConfig signingConfigs.debug
+            shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
+            minifyEnabled enableProguardInReleaseBuilds
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            crunchPngs (findProperty('android.enablePngCrunchInReleaseBuilds')?.toBoolean() ?: true)
+        }
     }
     packagingOptions {
         jniLibs {
             useLegacyPackaging (findProperty('expo.useLegacyPackaging')?.toBoolean() ?: false)
         }
-        resources {
-            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0', 'META-INF/*.kotlin_module']
-        }
     }
     androidResources {
         ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:!CVS:!thumbs.db:!picasa.ini:!*~'
-    }
-    
-    // Add this to fix the Kotlin version compatibility issue
-    kotlinOptions {
-        jvmTarget = "17"
-    }
-    
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
