--- a/package.json
+++ b/package.json
@@ -45,8 +45,12 @@
     "@gluestack-ui/textarea": "^0.1.24",
     "@gluestack-ui/toast": "^1.0.8",
     "@gluestack-ui/tooltip": "^0.1.38",
+    "@hookform/resolvers": "^5.2.1",
     "@legendapp/motion": "^2.4.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.3",
+    "@react-native-firebase/app": "^23.0.1",
+    "@react-native-firebase/auth": "^23.0.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -57,6 +61,7 @@
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "^13.1.7",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
     "expo-secure-store": "^14.2.3",
@@ -65,10 +70,12 @@
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
+    "firebase": "^12.1.0",
     "lucide-react-native": "^0.535.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.62.0",
     "react-native": "0.76.6",
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
@@ -80,7 +87,8 @@
     "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
