Update Android build configurations and enhance authentication flow
- Updated app.json to set minSdkVersion to 24 and compileSdkVersion to 35 for improved compatibility.
- Modified metro.config.js to support SVG files in the asset pipeline.
- Enhanced package-lock.json and package.json with new dependencies, including expo-firebase-recaptcha for improved phone authentication.
- Refactored authentication services to utilize Firebase's new verification methods, streamlining the OTP verification process.
- Improved error handling and user feedback in the login component, ensuring a smoother user experience.

These changes enhance the app's build configuration and authentication capabilities, providing a more robust and user-friendly experience.

--- a/app.json
+++ b/app.json
@@ -36,6 +36,8 @@
       },
       "package": "com.kattunarkuzhu.app",
       "versionCode": 1,
+      "minSdkVersion": 24,
+      "compileSdkVersion": 35,
       "permissions": [
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
