--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "DARK_MODE=media expo start --ios",
     "web": "DARK_MODE=media expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "postinstall": "patch-package"
   },
   "jest": {
     "preset": "jest-expo"
@@ -54,15 +55,17 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~52.0.25",
+    "expo": "^52.0.00",
     "expo-blur": "~14.0.2",
     "expo-camera": "^16.1.11",
     "expo-constants": "~17.0.4",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "^13.1.7",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.0.4",
+    "expo-modules-core": "^2.5.0",
     "expo-router": "~4.0.16",
     "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "~0.29.20",
@@ -98,6 +101,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "jscodeshift": "^0.15.2",
+    "patch-package": "^8.0.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
