--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,6 +83,7 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 android {
     ndkVersion rootProject.ext.ndkVersion
 
+    buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
     namespace 'com.kattunarkuzhu.app'
