--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
-    "zod": "^4.0.17"
+    "zod": "^4.0.17",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
