Enhance registration process and update dependencies
- Added registration functionality by implementing the registerUser service to handle user registration data submission.
- Updated the Register component to include new registration data handling and navigation after successful OTP verification.
- Modified app.json to include API_BASE_URL for local development and added expo-secure-store to dependencies.
- Updated package.json and package-lock.json to reflect changes in dependencies, including version updates for several packages to improve compatibility and functionality.

These changes improve the user registration experience and ensure the app is using the latest dependencies for better performance and security.

--- a/app.json
+++ b/app.json
@@ -69,12 +69,14 @@
             "./assets/fonts/SpaceMono-Regular.ttf"
           ]
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
     },
     "extra": {
+      "API_BASE_URL": "http://localhost:3000",
       "router": {
         "origin": false
       },
