--- a/app.json
+++ b/app.json
@@ -76,7 +76,7 @@
       "typedRoutes": true
     },
     "extra": {
-      "API_BASE_URL": "http://localhost:3000",
+      "API_BASE_URL": "http://192.168.1.41:3000",
       "router": {
         "origin": false
       },
