--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "1.18.0",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
